Fixing ordered list on mobile

--- a/assets/css/mobile.scss
+++ b/assets/css/mobile.scss
@@ -100,7 +100,7 @@ ul li {
         font-size: 20px;
     }
     ul li {
-        list-style: none;
+        list-style: disc;
         padding-left: 0px;
         background: none;
     }
