--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -141,7 +141,7 @@ ul li {
         text-align: center;
     }
     ul li {
-        list-style: none;
+        list-style: disc;
         padding-left: 0px;
         background: none;
     }
